test/typecheck/errors/bad-views18.boa
o: output sum of int;

v1: table[year: int][projectID: string][fileName: string] of temp:int;
v2: table[a: string] of temp: int;

r1: v2._row;

while (v1 >> r1) {
	o << 1;
}
